--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -29,17 +29,14 @@ jobs:
       - name: Build Next.js App
         run: npm run build
 
+      - name: Build for Vercel
+        run: npx vercel build --prod
+
       - name: Upload Build Artifact
         uses: actions/upload-artifact@v4
         with:
-          name: nextjs-build
-          path: |
-            .next
-            public
-            package.json
-            package-lock.json
-            next.config.js
-            vercel.json
+          name: vercel-build
+          path: .vercel/output
 
   deploy:
     runs-on: ubuntu-latest
@@ -52,8 +49,8 @@ jobs:
       - name: Download Build Artifact
         uses: actions/download-artifact@v4
         with:
-          name: nextjs-build
-          path: ./
+          name: vercel-build
+          path: .vercel/output
 
       - name: Install Vercel CLI
         run: npm install -g vercel
