--- a/package.json
+++ b/package.json
@@ -20,11 +20,8 @@
     "@mui/icons-material": "^5.15.11",
     "@mui/material": "^5.15.11",
     "@radix-ui/react-slot": "^1.2.3",
-    "@react-three/drei": "^9.103.0",
-    "@react-three/fiber": "^8.16.1",
     "@reduxjs/toolkit": "^2.2.1",
     "@splinetool/react-spline": "^4.0.0",
-    "@types/three": "^0.163.0",
     "axios": "^1.12.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -47,8 +44,7 @@
     "sass": "^1.71.1",
     "smooth-scrollbar": "^8.8.4",
     "tailwind-merge": "^3.3.1",
-    "tailwindcss-animate": "^1.0.7",
-    "three": "^0.163.0"
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
